# openairinterface5g

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
charts/physims/: values.yaml
ci-scripts/: Jenkinsfile-GitLab-Container  Jenkinsfile-cluster  Jenkinsfile-colosseum  Jenkinsfile-nrue  Jenkinsfile-physim-deploy  Jenkinsfile-tmp-full-ran  Jenkinsfile-tmp-multi-enb  Jenkinsfile-tmp-multi-enb-nsa  Jenkinsfile-tmp-ran  args_parse.py  checkAddedWarnings.sh  checkCodingFormattingRules.sh  ci_infra.yaml  cls_analysis.py  cls_cluster.py  cls_cmd.py  cls_containerize.py  cls_module.py  cls_native.py  cls_oai_html.py  cls_oaicitest.py  cls_physim1.py  cls_static_code_analysis.py  doGitLabMerge.sh  epc.py  main.py  provideUniqueImageTag.py  ran.py  sshconnection.py  xml_class_list.yml
ci-scripts/as_ue/: aw2s-multi-00102-20.cfg  aw2s-multi-00102-2x2-v2.cfg
ci-scripts/colosseum_scripts/: README.md  check-results.sh  get-test-results.sh  launch-job.sh  set-job-status.sh  wait-job-end.sh
ci-scripts/conf_files/: enb-rcc.band7.25prb.tm1.if4p5.conf  enb.band40.100prb.usrpb200.tm1-defaultscheduler.conf  enb.band40.25prb.usrpb200.conf  enb.band7.100prb.rfsim.conf  enb.band7.100prb.usrpb200.tm1.conf  enb.band7.25prb.rfsim.conf  enb.band7.50prb.rfsim.conf  enb.band7.50prb.usrpb200.tm1.conf  gnb-cu.sa.band78.106prb.conf  gnb-cu.sa.f1.conf  gnb-cucp.sa.f1.conf  gnb-cucp.sa.f1.quectel.conf  gnb-cuup.sa.f1.conf  gnb-cuup.sa.f1.quectel.conf  gnb-du.sa.band1.52prb.usrpb210.conf  gnb-du.sa.band78.106prb.rfsim.conf  gnb-du.sa.band78.106prb.usrpb200.conf  gnb-vnf.sa.band78.273prb.aerial.conf  gnb.band66.106prb.rfsim.phytest-dora.conf  gnb.band78.106prb.rfsim.phytest-dora.conf  gnb.band78.106prb.usrpn300.phytest-dora.conf  gnb.band78.162prb.usrpn300.phytest-dora.conf  gnb.band78.273prb.usrpn300.phytest-dora.conf  gnb.nsa.band78.106prb.usrpb200.conf  gnb.nsa.band78.106prb.usrpn310.2x2.conf  gnb.sa.band261.u3.32prb.rfsim.conf  gnb.sa.band66.106prb.rfsim.conf  gnb.sa.band66.ntn.25prb.rfsim.conf  gnb.sa.band66.u0.25prb.rfsim.conf  gnb.sa.band77.162prb.usrpn310.2x2.conf  gnb.sa.band77.162prb.usrpn310.4x4.conf  gnb.sa.band77.273prb.fhi72.4x4-vvdn.conf  gnb.sa.band77.273prb.usrpn310.2x2.conf  gnb.sa.band78.106prb.n310.7ds2u.conf  gnb.sa.band78.106prb.rfsim.conf  gnb.sa.band78.106prb.rfsim.neighbour.conf  gnb.sa.band78.106prb.rfsim.yaml  gnb.sa.band78.106prb.usrp310.2x2.conf  gnb.sa.band78.106prb.usrpb200.sc-fdma.conf  gnb.sa.band78.106prb.usrpn310.ddsuu-2x2.conf  (+10 more)
ci-scripts/docker/: Dockerfile.cppcheck.xenial  Dockerfile.unittest.ubuntu22
ci-scripts/scripts/: create_workspace.sh
ci-scripts/tests/: README.md  build.py  cmd.py  deployment.py  iperf-analysis.py  ping-iperf.py
ci-scripts/xml_files/: cluster_image_build.xml  container_4g_l2sim_proxy.xml  container_4g_l2sim_tdd.xml  container_4g_rfsim_fdd_05MHz.xml  container_4g_rfsim_fdd_05MHz_noS1.xml  container_4g_rfsim_fdd_10MHz.xml  container_4g_rfsim_fdd_20MHz.xml  container_4g_rfsim_fembms.xml  container_4g_rfsim_mbms.xml  container_4g_rfsim_tdd_05MHz.xml  container_5g_e1_rfsim.xml  container_5g_f1_rfsim.xml  container_5g_fdd_rfsim.xml  container_5g_rfsim.xml  container_5g_rfsim_24prb.xml  container_5g_rfsim_2x2.xml  container_5g_rfsim_fdd_phytest.xml  container_5g_rfsim_fr2_32prb.xml  container_5g_rfsim_ntn_geo.xml  (+49 more)
cmake_targets/: build_oai  cross-arm.cmake
common/: 5g_platform_types.h  CMakeLists.txt  ngran_types.h
common/config/yaml/: CMakeLists.txt  config_yaml.cpp
common/config/yaml/tests/: CMakeLists.txt  test1.yaml  test_int_array.yaml  test_list.yaml  test_list_of_mappings.yml  test_recursion.yaml  test_string.yaml  test_yaml_config.cpp
doc/: BUILD.md  Doxyfile  FEATURE_SET.md  L2NFAPI.md  LDPC_T2_OFFLOAD_SETUP.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  RUN_NR_multiple_BWPs.md  SW_archi.md  TESTBenches.md  TESTING_GNB_W_COTS_UE.md  UnitTests.md  clang-format.md  code-style-contrib.md  cross-compile.md  handover-tutorial.md  iqrecordplayer_usage.md  system_requirements.md
docker/: Dockerfile.base.rhel9  Dockerfile.base.rocky  Dockerfile.base.ubuntu22  Dockerfile.base.ubuntu22.cross-arm64  Dockerfile.build.fhi72.rhel9  Dockerfile.build.rhel9  Dockerfile.build.rocky  Dockerfile.build.ubuntu22  Dockerfile.build.ubuntu22.cross-arm64  Dockerfile.clang.rhel9  Dockerfile.gNB.aerial.ubuntu22  Dockerfile.gNB.aerial.ubuntu22.sanitize-address  Dockerfile.gNB.aw2s.rhel9  Dockerfile.gNB.aw2s.rocky  Dockerfile.gNB.aw2s.ubuntu22  Dockerfile.gNB.fhi72.rhel9  Dockerfile.gNB.fhi72.rocky  Dockerfile.gNB.fhi72.ubuntu22  Dockerfile.gNB.rhel9  Dockerfile.gNB.rocky  Dockerfile.gNB.ubuntu22  Dockerfile.nr-cuup.rhel9  Dockerfile.nr-cuup.ubuntu22  Dockerfile.nrUE.rhel9  Dockerfile.nrUE.rocky  Dockerfile.nrUE.ubuntu22  README.md
executables/: lte-enb.c  lte-ru.c  lte-softmodem.c  lte-softmodem.h  lte-ue.c  nr-cuup.c  nr-gnb.c  nr-ru.c  nr-softmodem.c  nr-softmodem.h  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  softmodem-bits.h  softmodem-common.c  softmodem-common.h
openair1/PHY/TOOLS/imscope/: CMakeLists.txt  imscope.cpp
openair1/PHY/TOOLS/tests/: CMakeLists.txt  benchmark_rotate_vector.cpp  test_dft.c  test_log2_approx.cpp  test_signal_energy.cpp  test_vector_op.cpp
openair2/F1AP/lib/: CMakeLists.txt  f1ap_interface_management.c  f1ap_interface_management.h  f1ap_lib_common.c  f1ap_lib_common.h  f1ap_lib_extern.h  f1ap_lib_includes.h  f1ap_rrc_message_transfer.c  f1ap_rrc_message_transfer.h
openair2/F1AP/tests/: CMakeLists.txt  f1ap_lib_test.c
openair2/LAYER2/NR_MAC_UE/: CMakeLists.txt  config_ue.c  mac_defs.h  mac_proto.h  main_ue_nr.c  nr_ra_procedures.c  nr_ue_dci_configuration.c  nr_ue_power_procedures.c  nr_ue_procedures.c  nr_ue_scheduler.c
openair2/LAYER2/NR_MAC_UE/tests/: CMakeLists.txt  test_nr_ue_power_procedures.cpp  test_nr_ue_ra_procedures.cpp
openair2/LAYER2/nr_rlc/tests/: CMakeLists.txt  benchmark_nr_rlc_am_entity.cpp  test.c  test_nr_rlc_am_entity.cpp
openshift/: README.md  oai-gnb-fhi72-bc.yaml  ran-base-bc.yaml
(+534 files in other folders)
